fix: replace fill-available to stretch

--- a/apps/code-review/src/app/pages/overview/overview.component.scss
+++ b/apps/code-review/src/app/pages/overview/overview.component.scss
@@ -1,9 +1,6 @@
 :host {
     width: 100%;
-    height: 100%;
-    height: -webkit-fill-available;
-    height: fill-available;
-    min-height: -moz-available;
+    height: stretch;
     display: flex;
     flex-direction: column;
 }
